cmake_minimum_required(VERSION 3.23)
project(optimisation_d_une_ligne_d_assemblage_ing2_tg_2023_2024_2_10 C)

set(CMAKE_C_STANDARD 11)

add_executable(optimisation_d_une_ligne_d_assemblage_ing2_tg_2023_2024_2_10 main.c Exclusion.c Exclusion.h Graphe.c Graphe.h Operations.c Operations.h Precedences.c Precedences.h Temps_de_cycle.c Temps_de_cycle.h Header.h)
